API de Generació de CSV